[package]
name = "bulletyaml"
version = "0.1.0"
authors = ["Arnaud de Bossoreille <arnaud.debossoreille@gmail.com>", "Koji AGAWA <atty303@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "BulletML library in Rust with extension"
documentation = "https://docs.rs/bulletml"
repository = "https://github.com/atty303/bulletyaml_rs"

[dependencies]
derive-new = "0.5"
indextree = "4.0"
fasteval = "0.2"
regex = "1.3"
roxmltree = "0.9"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dev-dependencies]
matches = "0.1"

[features]
backtrace = []
